--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,2 +1,3 @@
-fetch_buildings_path=<MUST_BE_FILLED>
-visualization_path=<MUST_BE_FILLED>
+fetch_buildings_path=python3 D:\\Inzynierka-22\\inz-mik-dom-repo\\services\\building_fetcher\\building_fetcher.py
+visualization_path=D:\\Inzynierka-22\\inz-mik-dom-repo\\services\\visualization
+wind_calculator_path=D:\\Inzynierka-22\\inz-mik-dom-repo\\services\\wind_calculator\\air-flow-3D.exe
