--- a/services/visualization/package.json
+++ b/services/visualization/package.json
@@ -9,7 +9,7 @@
   "author": "Mikolaj Kardys",
   "license": "ISC",
   "dependencies": {
-    "ccapture.js": "^1.1.0",
+    "ccapture.js-npmfixed": "^1.1.0",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "stream-to-array": "^2.3.0",
