--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,3 +1,4 @@
-fetch_buildings_path=python3 D:\\Inzynierka-22\\inz-mik-dom-repo\\services\\building_fetcher\\building_fetcher.py
-visualization_path=D:\\Inzynierka-22\\inz-mik-dom-repo\\services\\visualization
-wind_calculator_path=D:\\Inzynierka-22\\inz-mik-dom-repo\\services\\wind_calculator\\air-flow-3D.exe
+fetch_buildings_path=python3 /mnt/HDD/inzynierka/inz-mik-dom-repo/services/building_fetcher/building_fetcher.py
+visualization_path=/mnt/HDD/inzynierka/inz-mik-dom-repo/services/visualization
+wind_calculator_path=python3 /mnt/HDD/inzynierka/inz-mik-dom-repo/services/wind_calculator/air-flow-3D.py
+pollution_emitters_path=python3 /mnt/HDD/inzynierka/inz-mik-dom-repo/services/pollution_emitters/pollution-emitters.py
