--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .idea
+inz-repo-jar.iml
+target
 services/visualization/node_modules
 services/visualization/package-lock.json
 services/visualization/public/data/*
